extends Control


var stock_line_first = false
var stock_line1 = false
var stock_line2 = false
var stock_line3 = false
var stock_line4 = false
var stock_line5 = false
var stock_line6 = false
var stock_line7 = false
var stock_line8 = false

# activates stockline button
func _on_stockline_1_pressed():
	stock_line1 = true

# activates stockline button
func _on_stockline_2_pressed():
	stock_line2 = true

# activates stockline button
func _on_stockline_3_pressed():
	stock_line3 = true

# activates stockline button
func _on_stockline_4_pressed():
	stock_line4 = true

# activates stockline button
func _on_stockline_5_pressed():
	stock_line5 = true

# activates stockline button
func _on_stockline_6_pressed():
	stock_line6 = true

# activates stockline button
func _on_stockline_7_pressed():
	stock_line7 = true

# activates stockline button
func _on_stockline_8_pressed():
	stock_line8 = true

# activates stockline button
func _on_stock_select_first_pressed():
	stock_line_first = true
